[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "baskerville"
authors = [
    {name = "Calico f(DNA)", email = "drk@calicolabs.com"}
]
readme = "README.md"
requires-python = ">=3.8, <3.11"
classifiers = ["License :: OSI Approved :: Apache License"]
dynamic = ["version", "description", "dependencies"]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "pytest==7.1.2"
]

[tool.setuptools_scm]
