[build-system]
requires = ["setuptools>=69.0.3", "setuptools_scm>=8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "baskerville"
description = "baskerville"
authors = [
    {name = "Calico f(DNA)", email = "drk@calicolabs.com"},
]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]

requires-python = ">=3.9"
dependencies = [
    "h5py~=3.11",
    "intervaltree~=3",
    "joblib~=1",
    "matplotlib~=3.9",
    "google-cloud-storage~=2",
    "natsort~=8.4",
    "networkx~=3.3",
    "numpy~=1.26",
    "pandas~=2.2",
    "pybigwig~=0.3",
    "pybedtools~=0.10",
    "pysam~=0.22",
    "qnorm~=0.8",
    "seaborn~=0.13",
    "scikit-learn~=1.5",
    "scipy~=1.13",
    "statsmodels~=0.14",
    "tabulate~=0",
    "tensorflow~=2.15",
    "tqdm~=4",
]

[project.optional-dependencies]
dev = [
    "black~=24",
    "pytest~=7.4",
    "ruff~=0.6",
]

gpu = [
    "tensorrt==8.6"
]

[project.urls]
Homepage = "https://github.com/calico/baskerville"

[tool.setuptools_scm]