[metadata]
name = baskerville
author = David Kelley
author_email = drk@calicolabs.com
description = Machine learning methods for DNA sequence analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/calico/baskerville
project_urls =
    Bug Tracker = https://github.com/calico/baskerville/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    h5py
    joblib
    intervaltree
    matplotlib
    natsort
    networkx
    numpy
    pandas
    pybigwig
    pysam
    pybedtools
    qnorm
    seaborn
    scikit-learn
    scipy
    statsmodels
    tabulate
    tensorflow>2.10