[metadata]
name = baskerville
author = David Kelley
author_email = drk@calicolabs.com
description = Machine learning methods for DNA sequence analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/calico/baskerville
project_urls =
    Bug Tracker = https://github.com/calico/baskerville/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <3.11
install_requires =
    h5py
    joblib
    intervaltree
    matplotlib
    natsort
    networkx
    numpy
    pandas
    pybigwig
    pysam
    pybedtools
    qnorm
    seaborn
    scikit-learn
    scipy
    statsmodels
    tabulate
    tensorflow>2.10

[options.extras_require]
dev =
    black==22.3.0
    pytest==7.1.2

[options.packages.find]
where = src
