[metadata]
name = baskerville
author = David Kelley
author_email = drk@calicolabs.com
description = Machine learning methods for DNA sequence analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/calico/baskerville
project_urls =
    Bug Tracker = https://github.com/calico/baskerville/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <3.11
install_requires =
    h5py~=3.7.0
    intervaltree~=3.1.0
    joblib~=1.1.1
    matplotlib~=3.7.1
    google-cloud-storage~=2.0.0
    natsort~=7.1.1
    networkx~=2.8.4
    numpy~=1.24.3
    pandas~=1.5.3
    pybigwig~=0.3.18
    pysam~=0.21.0
    pybedtools~=0.9.0
    qnorm~=0.8.1
    seaborn~=0.12.2
    scikit-learn~=1.2.2
    scipy~=1.9.1
    statsmodels~=0.13.5
    tabulate~=0.8.10
    tensorflow~=2.12.0
    tqdm~=4.65.0

[options.extras_require]
dev =
    black==22.3.0
    pytest==7.1.2

[options.packages.find]
where = src
